@@ -3,7 +3,7 @@
  <tileset firstgid="1" name="Desert" tilewidth="32" tileheight="32" spacing="1" margin="1">
   <image source="tmw_desert_spacing.png" width="265" height="199"/>
  </tileset>
- <objectgroup name="Objects" width="8" height="8">
+ <objectgroup color="#ff0000" name="Objects" width="8" height="8">
   <object name="Rect" x="32" y="32" width="64" height="96"/>
   <object name="Ellipse" x="128" y="32" width="96" height="64">
    <ellipse/>
